corrected article text's behavior

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 					</div>
 					<div id="article_sneakpeek"> The Russian President hasn't been seen in public for two weeks, and the world is starting to wonder why...</div>
 				</div>
-				<div id="featured_background"></div>
 			</section>
+		</div>
+		<div id="content">
 		</div>
 	</body>
 </html>
