--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="assets/css/landing.css" rel="stylesheet" type="text/css" />
-		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|ABeeZee|Martel+Sans|Hind' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|Martel+Sans|Hind' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div id="top_bar">
@@ -26,16 +26,22 @@
 			</a>
 			<div id="main_title">
 				<div id="top_set">
-					<div id="big_news_bar">
-						<div id="pakistan" class="big_news_link"> PAKISTAN
+					<nav id="navigation_bar">
+						<div id="politics" class="nav_tab"> Politics
 						</div>
-						<div id="islam" class="big_news_link"> ISLAMIC STATE
+						<div id="business" class="nav_tab"> Business
 						</div>
-						<div id="more" class="big_news_link"> MORE CURRENT EVENTS
+						<div id="tech" class="nav_tab"> Tech
 						</div>
-					</div>
-					<div class="float_right">
-						<div id="login_bar">
+						<div id="entertainment" class="nav_tab"> Entertainment
+						</div>
+						<div id="finance" class="nav_tab"> Finance
+						</div>
+						<div id="seemore" class="nav_tab"> All Sections
+						</div>
+					</nav>
+					<div id="login_bar">
+						<div class="float_right">
 							<div id="signin" class="account_button"> Sign In </div>
 							<div id="create" class="account_button"> Create an Account </div>
 						</div>
@@ -44,13 +50,10 @@
 				<div id="bottom_set">
 					<div id="edition">
 						<div id="edition_text"> Edition </div>
-						<select id="edition_button">
-						  	<option value="us"> U.S.</option>
-						  	<option value="canada"> Canada </option>
-						  	<option value="brazil"> Brazil </option>
-						  	<option value="france"> France </option>
-						  	<option value="sample_edition"> Sample </option>
-						</select>
+						<div id="us" class="edition_choice"> U.S. </div>
+						<div id="france" class="edition_choice"> France </div>
+						<div id="brazil" class="edition_choice"> Brazil </div>
+						<div id="sample_edition" class="edition_choice"> Sample </div>
 					</div>
 					<div id="search_container">
 						<img src="assets/img/landing-page/search.png">
@@ -59,23 +62,7 @@
 				</div>
 			</div>
 		</div>
-		<nav id="navigation_bar">
-			<div id="breaking" class="nav_tab"> Breaking News
-			</div>
-			<div id="politics" class="nav_tab"> Politics
-			</div>
-			<div id="business" class="nav_tab"> Business
-			</div>
-			<div id="tech" class="nav_tab"> Tech
-			</div>
-			<div id="entertainment" class="nav_tab"> Entertainment
-			</div>
-			<div id="finance" class="nav_tab"> Finance
-			</div>
-			<div id="seemore" class="nav_tab"> All Sections
-			</div>
-		</nav>
-		<div id="featured_background">
+		<div id="landing_content">
 			<section id="featured_article">
 				<div id="featured_picture">
 					<img src="assets/img/landing-page/featured-image.jpg">
@@ -87,8 +74,90 @@
 					<div id="article_sneakpeek"> The Russian President hasn't been seen in public for two weeks, and the world is starting to wonder why...</div>
 				</div>
 			</section>
+			<div id="today_info">
+				<div id="date"> 
+					<div id="date_title"> Wednesday, 3/18/2015 </div>
+				</div>
+				<div id="location">
+					<img src="assets/img/landing-page/gps.png">
+					<div id="place"> Washington D.C. </div>
+					<div id="change_location"> change </div>
+				</div>
+				<div id="weather">
+					<img src="assets/img/landing-page/weather.png">
+					<div id="forecast">
+						<div id="forecast_title"> Rainy </div>
+						<div id="temperature"> L: 40° H: 58° </div>
+						<div id="more_forecast"> See more forecast</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="content">
+			<div class="article_box">
+				<div id="latest" class="article_category"> Latest
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Lorem
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading"> 
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Ipsum
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Dolor
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Sit Amet
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Consectetur
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Adipiscing
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
+			<div class="article_box">
+				<div class="article_category"> Praesent
+				</div>
+				<div class="article_pic">
+				</div>
+				<div class="article_heading">
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
