added latest news

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<div id="date_title">  
 						<script>
 							var d = new Date();
-							var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday"]
+							var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]
 							var curr_day = d.getDay(); 
 							var curr_date = d.getDate();
 							var curr_month = d.getMonth() + 1;
@@ -100,11 +100,27 @@
 						<div id="more_forecast"> See more forecast</div>
 					</div>
 				</div>
+				<div id="latest_news">
+					<div id="latest_heading"> Latest News
+					</div>
+					<li><div class="latest_article"> Maecenas eu nisl pretium, finibus felis eu, tempor enim.
+					</div></li>
+					<li><div class="latest_article"> Curabitur non enim sit amet purus scelerisque pellentesque id quis enim.
+					</div></li>
+					<li><div class="latest_article"> Duis tincidunt leo ut quam fringilla, dapibus dignissim lorem vehicula.
+					</div></li>
+					<li><div class="latest_article"> Mauris vitae purus sit amet justo sollicitudin maximus quis at justo.
+					</div></li>
+					<li><div class="latest_article"> Nam quis ante porta, blandit tellus et, ultrices ipsum.
+					</div></li>
+					<li><div class="latest_article"> Nulla lobortis diam laoreet mauris tincidunt, a vestibulum ipsum viverra.
+					</div></li>
+				</div>
 			</div>
 		</div>
 		<div id="content">
 			<div class="article_box">
-				<div id="latest" class="article_category"> Latest
+				<div class="article_category"> Volutpat 
 				</div>
 				<div class="article_pic">
 				</div>
@@ -112,7 +128,7 @@
 				</div>
 			</div>
 			<div class="article_box">
-				<div class="article_category"> Lorem
+				<div class="article_category"> Vitae 
 				</div>
 				<div class="article_pic">
 				</div>
@@ -128,7 +144,7 @@
 				</div>
 			</div>
 			<div class="article_box">
-				<div class="article_category"> Dolor
+				<div class="article_category"> Libero
 				</div>
 				<div class="article_pic">
 				</div>
@@ -167,6 +183,8 @@
 				<div class="article_heading">
 				</div>
 			</div>
+		</div>
+		<div id="footer">
 		</div>
 	</body>
 </html>
