--- a/index.html
+++ b/index.html
@@ -122,66 +122,132 @@
 			<div class="article_box">
 				<div class="article_category"> Volutpat 
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article1.jpg">
+					</div>
+					<div class="article_heading"> In ut arcu semper, tincidunt dui non, rhoncus quam. In sodales mollis.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Pellentesque molestie lectus odio, a faucibus diam bibendum et. </div></li>
+					<li><div class="more">  Praesent erat tortor, vestibulum vitae enim sit amet, cursus gravida ex. </div></li>
+					<li><div class="more"> Cras eget nisi a dolor tincidunt tempus et sed tellus. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Vitae 
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article2.jpg">
+					</div>
+					<div class="article_heading"> Suspendisse mattis venenatis ex, sed tincidunt risus luctus et.
+					</div>
 				</div>
-				<div class="article_heading"> 
+				<div class="more_articles">
+					<li><div class="more">  Phasellus blandit lacus eget vulputate sollicitudin. </div></li>
+					<li><div class="more">  Nam vehicula elit et ex rhoncus fringilla. Ut suscipit diam eu rhoncus egestas. </div></li>
+					<li><div class="more"> Maecenas dui est, sagittis sit amet luctus hendrerit, sagittis sit amet risus. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Ipsum
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article3.jpg">
+					</div>
+					<div class="article_heading"> Etiam gravida magna ac odio dictum Boeing. Duis nec lectus massa.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Cras sagittis a diam ultricies feugiat. Nulla viverra orci sed viverra commodo. </div></li>
+					<li><div class="more">  In velit nisl, facilisis nec laoreet id, sollicitudin sit amet mi. </div></li>
+					<li><div class="more"> Sed facilisis turpis dolor, facilisis mattis arcu rutrum id. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Libero
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article4.jpg">
+					</div>
+					<div class="article_heading"> Suspendisse sodales ultricies sem, vehicula congue eros dictum eu.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Etiam ultricies erat vel ultricies mollis. Etiam feugiat commodo eros vitae. </div></li>
+					<li><div class="more">  Proin sapien eros, feugiat ut egestas nec, porta at neque. Suspendisse potenti. </div></li>
+					<li><div class="more"> Phasellus risus metus, sollicitudin sit amet nunc quis, eleifend luctus diam. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Sit Amet
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article5.jpg">
+					</div>
+					<div class="article_heading"> Integer consequat quis libero eu pulvinar.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Nam condimentum, ligula non porttitor iaculis, ante risus tristique felis. </div></li>
+					<li><div class="more">  Ut metus mi, malesuada sit amet metus sed, posuere luctus purus. </div></li>
+					<li><div class="more"> Nunc ut malesuada mauris, ut volutpat mauris. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Consectetur
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article6.jpg">
+					</div>
+					<div class="article_heading"> Morbi faucibus felis nibh, et mattis sem sagittis sed.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Phasellus ante nibh, ullamcorper id ex vitae, hendrerit interdum odio. </div></li>
+					<li><div class="more">  Erat elit, tincidunt eget commodo at, tempus gravida nisl. </div></li>
+					<li><div class="more"> Donec posuere volutpat dui, id mattis lacus dapibus vitae. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Adipiscing
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article7.jpg">
+					</div>
+					<div class="article_heading"> Vivamus nec neque vitae metus porttitor fermentum quis quis ex.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Pellentesque imperdiet, neque eu congue condimentum, urna nulla. </div></li>
+					<li><div class="more">  Mauris ac rhoncus lacus, ac tincidunt nibh, tempus gravida nisl. </div></li>
+					<li><div class="more"> Cras volutpat sollicitudin mi, efficitur suscipit mauris pellentesque vel. </div></li>
 				</div>
 			</div>
 			<div class="article_box">
 				<div class="article_category"> Praesent
 				</div>
-				<div class="article_pic">
+				<div class="main_article">
+					<div class="article_pic">
+						<img src="assets/img/landing-page/article8.jpg">
+					</div>
+					<div class="article_heading"> Aliquam fermentum, purus a facilisis rutrum, ex ipsum maximus ipsum.
+					</div>
 				</div>
-				<div class="article_heading">
+				<div class="more_articles">
+					<li><div class="more">  Aenean eleifend massa at leo porttitor sagittis. Etiam quis velit. </div></li>
+					<li><div class="more">  Duis quis iaculis dui. Phasellus vitae semper odio, eget volutpat ligula. </div></li>
+					<li><div class="more"> Etiam accumsan ut dolor sit amet dapibus. Donec dictum dapibus enim. </div></li>
 				</div>
+			</div>
+			<div id="more_articles"> >> More News
 			</div>
 		</div>
 		<div id="footer">
