--- a/index.html
+++ b/index.html
@@ -250,7 +250,59 @@
 			<div id="more_articles"> >> More News
 			</div>
 		</div>
-		<div id="footer">
-		</div>
+		<footer id="footer">
+			<div id="footer_links">
+				<div id="site_map">
+					<div class="footer_list">
+						<div class="footer_heading"> Sections
+						</div>
+						<div class="footer_item"> Politics
+						</div>
+						<div class="footer_item"> Business
+						</div>
+						<div class="footer_item"> Technology
+						</div>
+						<div class="footer_item"> Finance
+						</div>
+						<div class="footer_item"> More Sections
+						</div>
+
+					</div>
+				</div>
+				<div id="site_info">
+					<div class="footer_list">
+						<div class="footer_heading"> Lorem Ipsum
+						</div>
+						<div class="footer_item"> About
+						</div>
+						<div class="footer_item"> Careers
+						</div>
+						<div class="footer_item"> Privacy Policy
+						</div>
+						<div class="footer_item"> FAQ
+						</div>
+						<div class="footer_item"> Archives
+						</div>
+						<div class="footer_item"> Contact Us
+						</div>
+					</div>
+				</div>
+				<div id="subscription">
+					<div id="subscription_heading"> Sign up for our daily news email
+					</div>
+					<div id="subscription_subheading"> Join our mailing list to get exclusive news every day for free.
+					</div>
+					<div id="search_container">
+		        		<input placeholder="Enter e-mail" type="text" id="search_bar">
+					</div>
+					<div id="subscribe_button"> Sign up
+					</div>
+				</div>
+			</div>
+			<div id="social_media">
+			</div>
+			<div id="copyright">
+			</div>
+		</footer>
 	</body>
 </html>
