--- a/index.html
+++ b/index.html
@@ -300,8 +300,24 @@
 				</div>
 			</div>
 			<div id="social_media">
+				<div id="facebook" class="icon">
+					<a href="http://facebook.com">
+						<img src="assets/img/landing-page/facebook.png">
+					</a>
+				</div>
+				<div id="instagram" class="icon">
+					<a href="http://instagram.com">
+						<img src="assets/img/landing-page/instagram.png">
+					</a>
+				</div>
+				<div id="twitter" class="icon">
+					<a href="http://twitter.com">
+						<img src="assets/img/landing-page/twitter.png">
+					</a>
+				</div>
 			</div>
 			<div id="copyright">
+				Copyright 2015 | Lorem Ipsum Post | Designed by <a href="http://quanhuynh.github.io">Quan Huynh</a>
 			</div>
 		</footer>
 	</body>
