--- a/index.html
+++ b/index.html
@@ -157,8 +157,50 @@
                 <div class="caption">Vestibulum eget dolor at tellus pharetra aliquam. Phasellus lacus lorem, varius at condimentum sed.</div></a></div>
           </div>
         </div>
-      </div><a href="" id="more-news" class="text-right col-xs-12">More News</a>
+      </div>
+      <div id="more-news" class="text-right col-xs-12"> <a href="">More News</a></div>
     </div>
-    <div class="container footer"></div>
+    <div class="container footer">
+      <div class="row main">
+        <div class="col-sm-4 col-xs-6">
+          <ul id="sections"> 
+            <div id="title">Sections</div>
+            <div class="list"><a href="">
+                <li class="section">Politics</li></a><a href="">
+                <li class="section">Business</li></a><a href="">
+                <li class="section">Technology</li></a><a href="">
+                <li class="section">Entertainment</li></a><a href="">
+                <li class="section">Finance</li></a><a href="">
+                <li class="section">Opinions</li></a><a href="">
+                <li class="section">Local</li></a></div>
+          </ul>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+          <ul id="sections">
+            <div id="title">Lorem Ipsum</div>
+            <div class="list"><a href="">
+                <li class="section">About Us</li></a><a href="">
+                <li class="section">Careers</li></a><a href="">
+                <li class="section">Privacy Policy</li></a><a href="">
+                <li class="section">FAQ</li></a><a href="">
+                <li class="section">Archives</li></a><a href="">
+                <li class="section">Contact Us</li></a></div>
+          </ul>
+        </div>
+        <div class="col-sm-4 col-xs-12 mailing">
+          <div class="heading">Sign up for our daily news e-mail</div>
+          <div class="subheading">Join to receive exclusive news every day for free </div>
+          <div class="email-form">
+            <input type="text" placeholder="Enter e-mail">
+          </div><a href="" class="subscribe-btn">Sign up</a>
+        </div>
+      </div>
+      <div class="row social-media">
+        <div class="col-xs-12 links"><a href="http://facebook.com"><img src="assets/img/icons/facebook.png"></a><a href="http://twitter.com"><img src="assets/img/icons/twitter2.png"></a><a href="http://instagram.com"><img src="assets/img/icons/instagram.png"></a><a href="http://pinterest.com"><img src="assets/img/icons/pinterest.png"></a><a href="http://youtube.com"><img src="assets/img/icons/youtube.png"></a></div>
+        <div class="col-xs-12 copyright">
+          <p>Copyright 2015 Lorem Ipsum Post | Designed by <a href="http://quanhuynh.github.io"> Quan Huynh </a></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
