--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <div class="section">Finance</div>
           </div>
           <div id="edition" class="row">
-            <div class="edition">Edition</div><a href="" class="choice">U.S. |</a><a href="" class="choice">Europe |</a><a href="" class="choice">Asia</a>
+            <div class="edition">Edition</div>
+            <div class="choice">U.S. |</div>
+            <div class="choice">Europe |</div>
+            <div class="choice">Asia</div>
           </div>
         </div>
         <div class="col-sm-4 text-right">
@@ -36,7 +39,7 @@
             <div id="signin">Sign in</div>
           </div>
           <div id="searchbar">
-            <input type="text" placeholder="Search"><a href=""><img src="assets/img/search.png"></a>
+            <input type="text" placeholder="Search"><img src="assets/img/search.png">
           </div>
         </div>
       </div>
@@ -46,17 +49,17 @@
         <div id="featured-article" class="col-md-8 col-sm-12">
           <div data-interval="4000" data-ride="carousel" id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
-              <div class="active item"><a href=""><img src="assets/img/featured1.jpg">
+              <div class="active item"><a href="article-page.html"><img src="assets/img/featured1.jpg">
                   <div id="text">
                     <div id="title">Maecenas laoreet justo lorem viverra.</div>
                     <div id="caption">Aenean odio lectus, bibendum eget dui eget, pharetra feugiat est.</div>
                   </div></a></div>
-              <div class="item"><a href=""><img src="assets/img/featured2.jpg">
+              <div class="item"><a href="article-page.html"><img src="assets/img/featured2.jpg">
                   <div id="text">
                     <div id="title">Aliquam posuere vulputate sapien vel.</div>
                     <div id="caption">Mauris ullamcorper tellus quis tortor fermentum, non interdum enim commodo.</div>
                   </div></a></div>
-              <div class="item"><a href=""><img src="assets/img/featured3.jpg">
+              <div class="item"><a href="article-page.html"><img src="assets/img/featured3.jpg">
                   <div id="text">
                     <div id="title">Nulla vitae lacinia arcu, in elementum ligula.</div>
                     <div id="caption">Quisque nec mauris in elit scelerisque ornare sit amet sed dui.</div>
@@ -87,12 +90,12 @@
             </div>
             <div id="latest-news" class="col-md-12 col-xs-7">
               <div id="title">Latest News</div>
-              <div id="articles"><a href="">
-                  <div class="article">Vestibulum quis tellus pretium arcu lobortis placerat nec at ligula.</div></a><a href="">
-                  <div class="article">Quisque id pellentesque odio. Nulla sit amet libero non nisl rutrum rhoncus eu a mauris.</div></a><a href="">
-                  <div class="article">Quisque dictum fringilla mi vel sagittis. Nam sed ligula ac quam porttitor dictum id quis quam.</div></a><a href="">
-                  <div class="article">Nullam urna metus, rhoncus non elit at, luctus pulvinar elit.</div></a><a href="">
-                  <div class="article">Mauris vel condimentum libero, non hendrerit nulla accumsan mollis.</div></a><a href="">
+              <div id="articles"><a href="article-page.html">
+                  <div class="article">Vestibulum quis tellus pretium arcu lobortis placerat nec at ligula.</div></a><a href="article-page.html">
+                  <div class="article">Quisque id pellentesque odio. Nulla sit amet libero non nisl rutrum rhoncus eu a mauris.</div></a><a href="article-page.html">
+                  <div class="article">Quisque dictum fringilla mi vel sagittis. Nam sed ligula ac quam porttitor dictum id quis quam.</div></a><a href="article-page.html">
+                  <div class="article">Nullam urna metus, rhoncus non elit at, luctus pulvinar elit.</div></a><a href="article-page.html">
+                  <div class="article">Mauris vel condimentum libero, non hendrerit nulla accumsan mollis.</div></a><a href="article-page.html">
                   <div class="article">Curabitur sed sapien vulputate, ullamcorper dui sit amet, egestas.</div></a></div>
             </div>
           </div>
@@ -103,58 +106,82 @@
       <div id="front-page-articles" class="panel panel-body">
         <div class="row">
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">2016 Election</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/2016-thumbnail.jpg"></a><a href="" class="title col-xs-6">Fusce pharetra semper metus, ac pulvinar ante finibus eu.
-                <div class="caption">Aenean consequat vestibulum maximus. Vivamus consequat in elit eu tincidunt. Cras eu sem et erat faucibus lobortis.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/2016-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Fusce pharetra semper metus, ac pulvinar ante finibus eu.
+                <div class="caption">Aenean consequat vestibulum maximus. Vivamus consequat in elit eu tincidunt. Cras eu sem et erat faucibus lobortis.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Science</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/science-thumbnail.jpg"></a><a href="" class="title col-xs-6">Donec aliquam lectus interdum elit feugiat.
-                <div class="caption">Augue quam, efficitur nec nulla at, porta finibus mauris. Fusce finibus tincidunt risus, nec placerat ipsum.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/science-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Donec aliquam lectus interdum elit feugiat.
+                <div class="caption">Augue quam, efficitur nec nulla at, porta finibus mauris. Fusce finibus tincidunt risus, nec placerat ipsum.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">LGBT</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/lgbt-thumbnail.jpg"></a><a href="" class="title col-xs-6">Vestibulum sit amet finibus lorem.
-                <div class="caption">Nullam augue purus, tincidunt ut pellentesque sed, ullamcorper vitae nisl. In iaculis, tortor ut fermentum.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/lgbt-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Vestibulum sit amet finibus lorem.
+                <div class="caption">Nullam augue purus, tincidunt ut pellentesque sed, ullamcorper vitae nisl. In iaculis, tortor ut fermentum.</div></a>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Police</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/police-thumbnail.jpg"></a><a href="" class="title col-xs-6">Curabitur tortor odio, congue vel lobortis tempus.
-                <div class="caption">Donec iaculis dolor sapien, vitae condimentum sapien faucibus id. Nunc vestibulum justo id dolor laoreet.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/police-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Curabitur tortor odio, congue vel lobortis tempus.
+                <div class="caption">Donec iaculis dolor sapien, vitae condimentum sapien faucibus id. Nunc vestibulum justo id dolor laoreet.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">ISIS</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/isis-thumbnail.jpg"></a><a href="" class="title col-xs-6">Ut rhoncus velit vitae enim lobortis, eu posuere felis bibendum.
-                <div class="caption">Vestibulum eget dolor at tellus pharetra aliquam. Phasellus lacus lorem, varius at condimentum sed.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/isis-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Ut rhoncus velit vitae enim lobortis, eu posuere felis bibendum.
+                <div class="caption">Vestibulum eget dolor at tellus pharetra aliquam. Phasellus lacus lorem, varius at condimentum sed.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Russia</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/russia-thumbnail.jpg"></a><a href="" class="title col-xs-6">Maecenas tincidunt placerat mi a mollis.
-                <div class="caption">Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi scelerisque interdum enim.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/russia-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Maecenas tincidunt placerat mi a mollis.
+                <div class="caption">Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi scelerisque interdum enim.</div></a>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Stock Market</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/stock-thumbnail.jpg"></a><a href="" class="title col-xs-6">Vestibulum vehicula est non eros iaculis.
-                <div class="caption">Duis tincidunt metus velit, non semper tellus dictum et. Fusce et semper tellus.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/stock-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Vestibulum vehicula est non eros iaculis.
+                <div class="caption">Duis tincidunt metus velit, non semper tellus dictum et. Fusce et semper tellus.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Apple</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/apple-thumbnail.jpg"></a><a href="" class="title col-xs-6">Nullam convallis lectus ut nisl consequat.
-                <div class="caption">Phasellus eleifend, erat id commodo dictum, sem ligula consectetur leo, eu dictum nulla nunc non mauris.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/apple-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Nullam convallis lectus ut nisl consequat.
+                <div class="caption">Phasellus eleifend, erat id commodo dictum, sem ligula consectetur leo, eu dictum nulla nunc non mauris.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">Environment</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/environment-thumbnail.jpg"></a><a href="" class="title col-xs-6">Duis vulputate pulvinar ligula, eget aliquet diam pulvinar at.
-                <div class="caption">In iaculis, tortor ut fermentum eleifend, velit risus dictum quam, sed posuere lorem nunc in nulla.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/environment-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Duis vulputate pulvinar ligula, eget aliquet diam pulvinar at.
+                <div class="caption">In iaculis, tortor ut fermentum eleifend, velit risus dictum quam, sed posuere lorem nunc in nulla.</div></a>
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">College</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/college-thumbnail.jpg"></a><a href="" class="title col-xs-6">Aliquam id ex ut nunc gravida maximus et eget felis.
-                <div class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis scelerisque enim, convallis.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/college-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Aliquam id ex ut nunc gravida maximus et eget felis.
+                <div class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis scelerisque enim, convallis.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">NCAA 2015</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/ncaa-thumbnail.jpg"></a><a href="" class="title col-xs-6">Phasellus gravida, erat eget ultricies scelerisque.
-                <div class="caption">Quisque congue erat ante, et ornare lacus interdum convallis. Proin pretium ultricies mi eu semper.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/ncaa-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Phasellus gravida, erat eget ultricies scelerisque.
+                <div class="caption">Quisque congue erat ante, et ornare lacus interdum convallis. Proin pretium ultricies mi eu semper.</div></a>
+            </div>
           </div>
           <div class="col-sm-4 col-xs-12 section"><a href="" class="tag">US Masters</a>
-            <div class="article row"><a href="" class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/masters-thumbnail.jpg"></a><a href="" class="title col-xs-6">Mauris est augue, dapibus nec risus nec, placerat fringilla elit.
-                <div class="caption">Vestibulum eget dolor at tellus pharetra aliquam. Phasellus lacus lorem, varius at condimentum sed.</div></a></div>
+            <div class="article row">
+              <div class="thumbnail col-xs-6"><img src="assets/img/front-page-tags/masters-thumbnail.jpg"></div><a href="article-page.html" class="title col-xs-6">Mauris est augue, dapibus nec risus nec, placerat fringilla elit.
+                <div class="caption">Vestibulum eget dolor at tellus pharetra aliquam. Phasellus lacus lorem, varius at condimentum sed.</div></a>
+            </div>
           </div>
         </div>
       </div>
@@ -165,26 +192,28 @@
         <div class="col-sm-4 col-xs-6">
           <ul id="sections"> 
             <div id="title">Sections</div>
-            <div class="list"><a href="">
-                <li class="section">Politics</li></a><a href="">
-                <li class="section">Business</li></a><a href="">
-                <li class="section">Technology</li></a><a href="">
-                <li class="section">Entertainment</li></a><a href="">
-                <li class="section">Finance</li></a><a href="">
-                <li class="section">Opinions</li></a><a href="">
-                <li class="section">Local</li></a></div>
+            <div class="list">
+              <li class="section">Politics</li>
+              <li class="section">Business</li>
+              <li class="section">Technology</li>
+              <li class="section">Entertainment</li>
+              <li class="section">Finance</li>
+              <li class="section">Opinions</li>
+              <li class="section">Local</li>
+            </div>
           </ul>
         </div>
         <div class="col-sm-4 col-xs-6">
           <ul id="sections">
             <div id="title">Lorem Ipsum</div>
-            <div class="list"><a href="">
-                <li class="section">About Us</li></a><a href="">
-                <li class="section">Careers</li></a><a href="">
-                <li class="section">Privacy Policy</li></a><a href="">
-                <li class="section">FAQ</li></a><a href="">
-                <li class="section">Archives</li></a><a href="">
-                <li class="section">Contact Us</li></a></div>
+            <div class="list">
+              <li class="section">About Us</li>
+              <li class="section">Careers</li>
+              <li class="section">Privacy Policy</li>
+              <li class="section">FAQ</li>
+              <li class="section">Archives</li>
+              <li class="section">Contact Us</li>
+            </div>
           </ul>
         </div>
         <div class="col-sm-4 col-xs-12 mailing">
