updated article page

--- a/article-page.html
+++ b/article-page.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|Martel+Sans|Hind" type="text/css">
     <link rel="stylesheet" href="assets/css/article.css" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="topbar row"><a href="" class="col-sm-2 col-xs-12 sitename"> 
+    <div class="topbar row"><a href="http://quanhuynh.org/news_site_template/" class="col-sm-2 col-xs-12 sitename"> 
         <p>LOREM </p>
         <p>IPSUM </p>
         <p>POST</p></a>
@@ -63,9 +64,40 @@
         <p>Nunc at metus nec nisl efficitur mollis. In vitae est ipsum. Integer porttitor gravida suscipit. Vivamus aliquam laoreet dignissim. Maecenas accumsan ex id tempus luctus. Morbi lorem sapien, pulvinar sit amet porta eget, volutpat vitae ex. In cursus euismod aliquam. Quisque sit amet ultricies orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam bibendum lorem turpis, et dapibus tellus varius vel.</p><img src="http://fillmurray.com/g/900/400">
         <p>Quisque malesuada mi a diam vestibulum, eu varius tellus molestie. Nam et ornare magna. Quisque tincidunt augue nisi, eget iaculis purus cursus nec. In quis feugiat lectus. Nullam neque dui, pulvinar nec ultrices vitae, pellentesque vitae purus. Sed et lectus nec metus euismod molestie eu id odio. Vestibulum rhoncus sodales leo, sed condimentum velit vulputate sed. Suspendisse mollis nisi id erat rutrum posuere. Integer lobortis in lacus id consectetur. Mauris turpis erat, semper quis porta sed, fringilla at leo. Maecenas cursus, augue id consequat hendrerit, dui mi sollicitudin tellus, ut posuere nibh diam ac erat. Aenean condimentum ex mattis dui congue, nec consectetur mi imperdiet. Suspendisse in sem non enim dignissim lobortis sit amet id augue. Fusce porttitor nunc ex, in tempor lectus eleifend vel.</p>
         <p>Suspendisse auctor risus ac efficitur maximus. Maecenas eget diam hendrerit, facilisis massa et, cursus lacus. Proin egestas dui ut arcu porta imperdiet. Suspendisse neque odio, consequat vitae arcu ut, tristique facilisis tellus. Nunc ultricies mauris sed libero blandit semper. In non leo fermentum, congue nisi nec, venenatis nisi. Vivamus imperdiet consequat elit quis efficitur. Nunc faucibus id ex sed hendrerit. Suspendisse potenti. Nullam purus erat, fringilla et maximus eu, imperdiet quis dolor. Suspendisse potenti. Fusce fermentum nec lectus cursus pulvinar. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+        <p>Nunc eleifend varius nisi vitae porttitor. Aenean a ligula eget nulla cursus vulputate sed id elit. Vivamus a sapien a dolor scelerisque pulvinar rutrum sed odio. Vivamus aliquam nisl in mauris luctus, a malesuada ligula congue. Nam elementum efficitur magna vel condimentum. In nec posuere orci. Etiam non urna ac leo porta laoreet. Aliquam sagittis sapien nibh, non accumsan massa ultricies quis. Cras massa purus, tincidunt in tristique et, semper non ligula. Curabitur rhoncus hendrerit arcu ullamcorper tempus. Cras varius pellentesque lectus, ullamcorper sodales massa cursus ut. Maecenas sed vestibulum nulla. Duis aliquet, ex ut venenatis blandit, massa diam sollicitudin massa, ut hendrerit nibh ligula nec sem.</p>
+        <p>Fusce varius dapibus tellus, id lobortis metus posuere at. Morbi sed nulla in odio semper consectetur a sed ligula. Vestibulum luctus, nulla eu tempus vehicula, tellus diam pellentesque erat, non molestie massa lectus non sem. Vestibulum pretium nibh in leo sodales dapibus a nec ipsum. Nam sed ligula sed orci placerat vehicula sed et augue. Praesent ut fringilla mi, nec hendrerit mi. Morbi ante ligula, lacinia quis metus ac, ultrices varius tortor. Ut sit amet venenatis metus. Fusce facilisis velit et molestie mattis.</p>
         <p>Integer finibus ornare auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris urna elit, fringilla sit amet dictum a, varius quis dui.</p>
+        <div class="col-xs-12 similar">
+          <div class="sim-heading">Related Articles</div>
+          <div class="col-xs-4 sim-art"><img src="http://fillmurray.com/201/151">
+            <div class="sim-title">Commodo congue ipsum pulvinar. Ut ac erat ex.</div>
+          </div>
+          <div class="col-xs-4 sim-art"><img src="http://fillmurray.com/202/150">
+            <div class="sim-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+          </div>
+          <div class="col-xs-4 sim-art"><img src="http://fillmurray.com/201/150">
+            <div class="sim-title">Nam et ornare magna. Quisque tincidunt augue nisi, eget iaculis</div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-3 col-xs-12 left-bar"></div>
+      <div class="col-md-3 col-xs-12 left-bar">
+        <h4 class="left-heading">Most Popular</h4>
+        <div class="col-md-12 col-xs-3 side-art"><img src="http://fillmurray.com/300/200">
+          <div class="side-title">Maecenas eget diam hendrerit, facilisis massa et.</div>
+        </div>
+        <div class="col-md-12 col-xs-3 side-art"><img src="http://fillmurray.com/301/200">
+          <div class="side-title">Vestibulum ante ipsum primis in faucibus orci.</div>
+        </div>
+        <div class="col-md-12 col-xs-3 side-art"><img src="http://fillmurray.com/300/201">
+          <div class="side-title">Duis id urna lorem. Praesent fermentum turpis nec ipsum dapibus.</div>
+        </div>
+        <div class="col-md-12 col-xs-3 side-art"><img src="http://fillmurray.com/300/202">
+          <div class="side-title">Nulla vel justo posuere, condimentum eros a.</div>
+        </div>
+        <div class="col-xs-12 text-right">
+          <h4 class="more">Browse more popular articles</h4>
+        </div>
+      </div>
     </div>
     <div class="container footer">
       <div class="row main">
