--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Poiret+One|Indie+Flower|Pacifico|Signika:600|Ubuntu+Condensed|Roboto:500|Oswald|Roboto+Slab|Open+Sans:600|Fresca|Rajdhani|Martel+Sans|Hind" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/icon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="topbar row"><a href="" class="col-sm-2 col-xs-12 sitename"> 
+    <div class="topbar row"><a href="http://quanhuynh.org/news_site_template/" class="col-sm-2 col-xs-12 sitename"> 
         <p>LOREM </p>
         <p>IPSUM </p>
         <p>POST</p></a>
